--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ bin/
 etc/
 Scripts/
 data/
+catboost_info/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
